objects/SBQQ__FavoriteShare__c.object
<CustomObject>
    <customHelpPage>SBQQ__FavoritesHelp</customHelpPage>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Favorite__c</fullName>
        <label>Favorite</label>
        <referenceTo>SBQQ__Favorite__c</referenceTo>
        <relationshipLabel>Favorite Shares</relationshipLabel>
        <relationshipName>FavoriteShares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FavoriteShares</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Share</label>
    <nameField>
        <displayFormat>F-{0}</displayFormat>
        <label>Favorite Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorite Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>